# SEGGER_RTT

./: CMakeLists.txt  RTT_PrintfTest.c  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c  meson.build
Config/: SEGGER_RTT_Conf.h
